--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>2.7.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.final</groupId>
-    <artifactId>porfolio</artifactId>
+    <artifactId>hugomonte</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>porfolio</name>
-    <description>Porfolio</description>
+    <name>Hugomonte</name>
+    <description>Hugomonte</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -21,6 +21,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
